--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="flickity.css">
     <link rel="stylesheet" href="media.css">
-    <title>SALAM BAKERY</title>
+    <title>BLISS BAKERY</title>
 </head>
 
 <body>
